tests/pos/wildcard-type-syntax-future-migration.scala
import scala.language.`future-migration`

def test =
  Seq() match
    case _: List[_] => // warn
    case _: Seq[?] =>
